trade-container: prevent button from jumping around

--- a/src/sass/app_2/modules/trading.scss
+++ b/src/sass/app_2/modules/trading.scss
@@ -67,6 +67,7 @@
     &__loader {
         width: 92px;
         height: 8px;
+        margin: 3.5px 0;
         @extend .loader;
 
         &--loading {
